feat: swagger 라우팅 설정

--- a/src/main/resources/static/swagger-ui.html
+++ b/src/main/resources/static/swagger-ui.html
@@ -17,7 +17,7 @@
 <script>
   window.onload = function() {
     const ui = SwaggerUIBundle({
-      url: "./swagger-ui/openapi3.yaml", // 생성될 YAML 파일의 경로로 변경
+      url: "/static/swagger-ui/openapi3.yaml", // 생성될 YAML 파일의 경로로 변경
       dom_id: '#swagger-ui',
       presets: [
         SwaggerUIBundle.presets.apis,
